...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_birthdate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                    <AutoCompleteTextView
                        android:id="@+id/dropdown_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <AutoCompleteTextView
                        android:id="@+id/drop_down_duration_homeless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/button_take_picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/text_rolla_when_became_homeless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radio_from_rolla_n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <AutoCompleteTextView
                    android:id="@+id/dropdown_reason_rolla"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/radio_violence_n"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/radio_veteran_n"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <RadioButton
                        android:id="@+id/radio_offender_n"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <CheckBox
                    android:id="@+id/checkbox_consent_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <CheckBox
                    android:id="@+id/checkbox_consent_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <CheckBox
                    android:id="@+id/checkbox_consent_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/text_signature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <com.github.gcacace.signaturepad.views.SignaturePad
                    android:id="@+id/sp"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
...
