<resources>
    <string name="app_name">The Rolla Mission App</string>
    <string name="return_start">Return to Start Screen</string>
    <string name="what_is_name">What is your name?</string>
    <string name="is_this_you">Is this your picture?</string>
    <string name="checkin_recorded">Your check in has been recorded. Thank you!</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="first_time_message">First time here?</string>
    <string name="checkin"><bold>Check In</bold></string>
    <string name="tap_to_register">Touch here to register</string>
    <string name="homeless_question">How long have you been homeless?</string>
    <string name="domestic_violence_question">Are you fleeing domestic violence?</string>
    <string name="veteran_question">Are you a veteran?\n</string>
    <string name="sex_offender_question">Are you a registered sex-offender?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="or">or</string>
    <string name="less_1_month">Less than 1 month</string>
    <string name="months_1to3">1 &#8211; 3 months</string>
    <string name="months_3to6">3 &#8211; 6 months</string>
    <string name="months_6to12">6 &#8211; 12 months</string>
    <string name="years_1to2">1 &#8211; 2 years</string>
    <string name="more_2_years">2+ years</string>
    <string name="take_picture_button">Take Picture</string>
    <string name="rolla_when_became_homeless">Did you reside in Rolla when you became homeless?</string>
    <string name="what_city_from">What city are you from?"</string>
    <string name="reason_for_coming">Why did you come to Rolla?</string>
    <string name="family">Family in the area</string>
    <string name="school">School</string>
    <string name="relationship">A relationship</string>
    <string name="hospital">Hospital/Medical care</string>
    <string name="substance">Substance use treatment facility"</string>
    <string name="mission">The Rolla Mission</string>
    <string name="other">Other</string>
    <string name="picked_other">If you chose other, explain below:</string>
    <string name="work">Work/job offer</string>
    <string name="consent_directions">Please read the following lines and press the checkbox next to each to indicate that you agree:</string>
    <string name="consent_1">I understand that the information provided will be kept confidential and only authorized staff of The Rolla Mission will review this information.</string>
    <string name="consent_2">I understand that The Rolla Mission may release my name, date of birth, photo, and dates of overnight stay to Probation and Parole and the Rolla Police Department upon their request for information.</string>
    <string name="consent_3">No information will be released to any other agencies or individuals without my written or expressed consent.</string>
    <string name="signature_label">Signature (use finger):</string>
    <string name="clear_signature">Clear Signature</string>
    <string name="name">Name</string>
    <string name="name_helper">First and last name</string>
    <string name="birthdate_hint">Date of birth</string>
    <string name="birthdate_helper">mm/dd/yyyy</string>
    <string name="pick_birthdate">Pick Birthdate</string>
    <string name="phone_num">Phone Number</string>
    <string name="phone_num_helper">Can be close friend\'s or relative\'s number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other_gender">Other</string>
    <string name="pref_not_answer">No response</string>
    <string name="registration_success_title"><bold>Registration Successful!</bold></string>
    <string name="registration_success_message">You can now check in to the overnight shelter. Would you like to do so now?</string>
    <string name="error_message">The intended action was not successful. Please make sure that you are connected to the internet. If the problem persists, contact the developers of this application.</string>
    <string name="warning_message">Any data you entered into the form will be lost. Do you still want to return to the start screen?</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="error_title"><bold>Error Encountered</bold></string>
    <string name="warning"><bold>Warning</bold></string>
    <string name="hide_keyboard">Hide Keyboard</string>
    <string name="patron_registration_form">Emergency Overnight Shelter In-Take Form</string>
    <string name="required">Required</string>
    <string name="checkin_instructions">After typing in your name, tap on your name in the list below to check in.</string>
    <string name="retake">Retake</string>
    <string name="device_admin_description">Device administration for The Rolla Mission\'s check-in app.</string>
    <string name="device_admin_label">The Rolla Mission</string>
    <string name="no_admin_permission">Unable to enter kiosk mode. This app does not have admin privileges.</string>
    <string name="invalid_birthdate">Invalid birth date</string>
    <string name="invalid_name">Invalid name</string>
</resources>
